crates/swc_ecma_parser/tests/typescript-errors/type-only-export-specifier/redundant-tokens/input.ts.stderr
error: Expected ',', got 'baz'
 --> $DIR/tests/typescript-errors/type-only-export-specifier/redundant-tokens/input.ts:1:26
  |
1 | export { type foo as bar baz }
  |                          ^^^

