crates/swc_ecma_parser/tests/typescript-errors/type-only-export-specifier/redundant-tokens/input.ts
export { type foo as bar baz }
